<resources>
    <string name="app_name">SCSTrade Pro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scs_trade_p">SCSTrade Pro</string>
    <string name="this_next_g">This next gen\nof your investments</string>
    <string name="connecting_">Connecting to 100+exchange worldwide ...</string>
    <string name="kse_100">KSE 100</string>
    <string name="m_vol_721_9">M.Vol: 721.934m</string>
    <string name="some_id">91,458.58</string>
    <string name="index_value">0.0</string>
    <string name="kse100">KSE100</string>
    <string name="h_116_700_0">H: 0.0 0.0(0.0%)</string>
    <string name="l_116_700_0">L: 0.0 0.0(0.0%)</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="reg">REG</string>
    <string name="sariah">Shariah</string>
    <string name="wtl">WTL</string>
    <string name="companyName">Worldcall Telecom Limited</string>
    <string name="volume">Vol: 127,408.831</string>
    <string name="weeks">52 Weeks</string>
    <string name="high_52">H: 147.5</string>
    <string name="low_52">L: 141.6</string>
    <string name="valueTrade">0.0</string>
    <string name="netChange">0.00 (0.00%)</string>
    <string name="high">H: 1.85</string>
    <string name="low">L: 1.60</string>
    <string name="bid_vol_100">Bid Vol: 100</string>
    <string name="bid_2_78">Bid: 2.78</string>
    <string name="ask_vol_2_2">Ask Vol: 2.205</string>
    <string name="ask_0_78">Ask: 0.78</string>
    <string name="label_text">+4,411.27 (+4.03%)</string>
    <string name="valueTradeIndices">Value: 16,757.17m</string>
    <string name="volumeIndices">Volume: 0.0</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="continue_wi">Continue with Google</string>
    <string name="scs_trade_p_logo">SCS Trade Pro</string>
    <string name="committed_t_appbar">Committed to intelligent investing</string>
    <string name="committed_t">Committed to intelligent investing</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="register_an">Register An Account</string>
    <string name="create_weal">Create wealth and create a better future</string>
    <string name="hi_there_we">Hi There! Welcome Back</string>
    <string name="let_s_sign_">Let’s sign in to your account and get started.</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Email</string>
    <string name="enter_user_name">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="don_t_have_">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_wit">Sign in with Google</string>
    <string name="indices">Indices</string>
    <string name="back">Back</string>
    <string name="market_stat">Market Status:</string>
    <string name="open">OPEN</string>
    <string name="closed">Closed</string>
    <string name="dec_2024_04">04:30PM</string>
    <string name="sector">Sector</string>
    <string name="all_stock">All Stocks</string>
    <string name="kmiallshr">KMIALLSHR</string>
    <string name="high_110_89">H: 0.0 0.0(0.0%)</string>
    <string name="leaders_">Leaders:</string>
    <string name="gainers_">Gainers</string>
    <string name="loser_">Losers</string>
    <string name="default_wat">Default Watchlist</string>
    <string name="companies">2 Companies</string>
    <string name="save_compan">Save Company to...</string>
    <string name="sectors">Sectors</string>
    <string name="Future">Future</string>
    <string name="headline">Automobile assembler</string>
    <string name="more_detail">More Details</string>
    <string name="market">Market</string>
    <string name="automobile_">Automobile assembler</string>
    <string name="create_a_ne">Create a New Watch list Group</string>
    <string name="update_a_wat">Update a Watch list Group</string>
    <string name="update_a_wa">Update a watch list group name to organize and track your selected companies for easier management of your investments.</string>
    <string name="create_watch">Create a new watch list group to organize and track your selected companies for easier management of your investments.</string>
    <string name="enter_watch_list_name">Enter Watch List Name</string>
    <string name="enter_symbol">Enter Symbol</string>
    <string name="symbol">Symbol</string>
    <string name="cable_elect"><![CDATA[Cable & electrical goods]]></string>
    <string name="e_p_e">E P/E</string>
    <string name="price">Price</string>
    <string name="avg_vol">Avg. Vol</string>
    <string name="the_pakista">The Pakistan Stock Exchange observed a positive trend during the trading week.</string>
    <string name="during_the_">During the session, the 100-Index experienced further momentum and climbed by 293 points, settling at 114,108.Experts attribute the market\'s improvement to increased investor confidence. Economic policies and better global conditions are also key to strengthening the stock market.Experts suggest that if this trend continues, further improvements can be expected in the coming days. Investors are advised to remain cautious while maintaining their investments in the market.</string>
    <string name="source_sama">Source</string>
    <string name="contact_sup"><![CDATA[Contact & Support]]></string>
    <string name="here_to_hel">Here to Help, Ready to Support!</string>
    <string name="office_timi">Office Timings:</string>
    <string name="am_to_5pm">9am to 5pm</string>
    <string name="warning">Warning</string>
    <string name="are_you_sur">Are you sure you want to delete your watchlist?</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="your_watch">Your watchlist has been deleted</string>
    <string name="continueB">Continue</string>
    <string name="fauji_foods">Fauji Foods Limited</string>
    <string name="food_person"><![CDATA[Food & Personal Care Products]]></string>
    <string name="label_text_reg">REG</string>
    <string name="label_text_index">KSE 100</string>
    <string name="rs_">Rs.</string>
    <string name="valueTrade_snapshot">218.80</string>
    <string name="netChange_snapshot">0.62 (3.28%)</string>
    <string name="volume_">Volume:</string>
    <string name="volume_value">2,548,950</string>
    <string name="avg_volume_">Avg Volume (12M):</string>
    <string name="market_cap_">Market Cap:</string>
    <string name="rs_218_76">Rs. 0.0</string>
    <string name="day_s_range">Day\'s Range</string>
    <string name="range_52">52 week\'s range</string>
    <string name="performance">Performance</string>
    <string name="one_pecent">0.0%</string>
    <string name="one_month">1 Month</string>
    <string name="three_month">3 Month</string>
    <string name="six_month">6 Month</string>
    <string name="one_year">1 Year</string>
    <string name="new_watchlist">New Watch List</string>
    <string name="company_add">Company added to the watch list</string>
    <string name="initial">S</string>
    <string name="syed_abdull">Syed Abdullah Shahid</string>
    <string name="basic_infor">Basic Information</string>
    <string name="default_web_client_id">44387316280-rj8nrvcjqa6hdahgr05b4tidnr5gbi7g.apps.googleusercontent.com</string>
    <string name="create_a_portfolio">+ Create a portfolio</string>
    <string name="create_a_new_portfolio_group">Create a New Portfolio Group</string>
    <string name="create_a_new_portfolio_group_to_organize_and_track_your_investments_easily">Create a new portfolio group to organize and track your investments easily.</string>
    <string name="current_mar">Current Market Value</string>
    <string name="current_mar_value">0.00</string>
    <string name="total_compa">Total Companies</string>
    <string name="p_l_summary"><![CDATA[P&L Summary:]]></string>
    <string name="days_p_l_ho"><![CDATA[Days P&L (Holding)]]></string>
    <string name="days_p_l_ho_value">+264 (+6,155%)</string>
    <string name="total_p_l_h"><![CDATA[Total P&L (Holding)]]></string>
    <string name="summary">Summary</string>
    <string name="cost">Cost</string>
    <string name="p_l"><![CDATA[P&L]]></string>
    <string name="total">Total</string>
    <string name="total_cost">4</string>
    <string name="total_p_l">+264 (+6,155%)</string>
    <string name="holding">Holding</string>
    <string name="history">History</string>
    <string name="history_cost">-</string>
    <string name="history_p_l">+2</string>
    <string name="new_buy_trade">New Buy Trade</string>
    <string name="sell_trade">Sell Trade</string>
    <string name="add_dividend">Add Divided</string>
    <string name="buy_stocks_"><![CDATA[Buy Stocks & Grow Your Portfolio]]></string>
    <string name="invest_in_s">Invest in stocks and expand your portfolio. Select your preferred stock, set the quantity, and make a smart trade.</string>
    <string name="input_text">Commission Type</string>
    <string name="feb_25">25-Feb-25</string>
    <string name="shares_value">180</string>
    <string name="net_price">Net Price</string>
    <string name="net_price_value">213.47</string>
    <string name="net_cost">Net Cost</string>
    <string name="net_cost_value">38,424.60</string>
    <string name="current_p_l_value">+2,021(5.36%)</string>
    <string name="supporting_">(Without hyphen \"-\")</string>
    <string name="tell_us_abo_basic">Tell us about your Basic Information</string>
    <string name="uin_type">UIN Type</string>
    <string name="uin">UIN</string>
    <string name="enter_your_uin_number">Enter your UIN Number</string>
    <string name="enter_fname_nic">Enter Full NIC Name</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_your_dob">Enter your DOB</string>
    <string name="mother_name">Mother Name</string>
    <string name="enter_your_mother_maiden_name">Enter your Mother Maiden Name</string>
    <string name="your_nationality">Your Nationality</string>
    <string name="select_your">Select your Marital Status:</string>
    <string name="choose_your">Choose Your Relationship:</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="is_your_nic">Is your NIC valid for a lifetime?</string>
    <string name="select_nic_expiry_date">Select NIC Expiry Date</string>
    <string name="place_of_bi">Place of Birth</string>
    <string name="select_your_country">Select your Country</string>
    <string name="select_your_city">Select your City</string>
    <string name="cdc_ivr_ser">CDC IVR Service</string>
    <string name="do_you_wish">Do you wish to subscribe to free of cost CDC IVR Service?</string>
    <string name="residence_number">Enter your Residence Number</string>
    <string name="select_your_province">Select your Province</string>
    <string name="is_attorney">Is Attorney NIC valid for a lifetime?</string>
    <string name="enter_your_mailing_address">Enter your Mailing Address</string>
    <string name="residence_num">Residence Number</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="father">Father</string>
    <string name="husband">Husband</string>
    <string name="attorney_country">Attorney Country</string>
    <string name="attorney_province">Attorney Province</string>
    <string name="attorney_city">Attorney City</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ \'_"</string>
    <string name="_0_9">0123456789</string>
</resources>