<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        tools:context=".views.aof.fragments.kyc.attorneyDetail.KycAttorneyDetailTwoFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/load_anim" />
        <com.example.scstrade.views.widgets.DualOptionToggleView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/is_attorney"
            app:titleDualOption="@string/is_attorney"
            app:titleButton1="No"
            app:titleButton2="Yes"
            app:hintDualOption="@string/select_nic_expiry_date"
            app:drawable="@drawable/baseline_calendar_today_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.scstrade.views.widgets.LabelledTextField
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/mobile_number"
            android:inputType="phone"
            android:maxLength="12"
            app:hintText="@string/mobile_number"
            app:hintTextField="@string/enter_your_mobile_number"
            app:infoText="@string/supporting_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/is_attorney" />


        <com.example.scstrade.views.widgets.LabelledTextField
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/email_addr"
            app:hintText="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:hintTextField="@string/enter_your_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_number" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:id="@+id/mailing_address"
            android:inputType="text|textMultiLine"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/enter_your_mailing_address"
            android:background="@drawable/drawable_text_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_addr"/>


        <com.example.scstrade.views.widgets.LabelledTextField
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/residence_number"
            android:inputType="phone"
            android:maxLength="30"
            app:hintText="@string/residence_num"
            app:hintTextField="@string/residence_number"
            app:infoText="@string/supporting_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailing_address" />


        <com.example.scstrade.views.widgets.LabelledSpinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/attorney_country"
            app:hintLabel="@string/attorney_country"
            app:dropdownLabel="@string/select_your_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/residence_number"/>


        <com.example.scstrade.views.widgets.LabelledSpinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/attorney_province"
            app:hintLabel="@string/attorney_province"
            app:dropdownLabel="@string/select_your_province"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attorney_country"/>


        <com.example.scstrade.views.widgets.LabelledSpinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/attorney_city"
            app:hintLabel="@string/attorney_city"
            app:dropdownLabel="@string/select_your_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attorney_province"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attorney_city"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:text="Back" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:text="Save &amp; Next" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>